--- a/styles.css
+++ b/styles.css
@@ -979,7 +979,7 @@ border: 1px solid rgba(13, 11, 70, 0.05);
     gap: 16px;
     margin-bottom: 0;
     transform: translateY(100%);
-    transition: transform 0.3s cubic-bezier(.4,0,.2,1);
+    transition: transform 0.4s cubic-bezier(.87, 0, .13, 1);
     align-items: stretch;
   }
   .floating-toolbar.open .toolbar-options {
@@ -3211,7 +3211,7 @@ html {
     gap: 16px;
     margin-bottom: 0;
     transform: translateY(100%);
-    transition: transform 0.3s cubic-bezier(.4,0,.2,1);
+    transition: transform 0.4s cubic-bezier(.87, 0, .13, 1);
     align-items: stretch;
   }
   
